# job_triage

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  AGENTS.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  docker-compose.yaml  expected_gross_salary_matrix_eur.csv  pyproject.toml
.github/workflows/: ci.yaml  codeql.yaml  pages.yaml  publish.yaml
docker/: Dockerfile
docs/: conf.py  index.rst  intro.md  python_api.rst  requirements.txt
migrations/: env.py
migrations/versions/: 055aec76ff62_initial_creation.py
src/job_triage/: _helpers.py  claude_api.py  logging_utils.py  schemas.py
src/job_triage/db/: db_access.py  models.py
src/job_triage/job_apply/: app.py  resumes.py  schemas.py
src/job_triage/job_apply/llm/: _helpers.py  prose.py  schemas.py  selection.py
src/job_triage/job_assess/: app.py  schemas.py  source_mapping.py
src/job_triage/job_assess/llm/: aliases.py  analyze.py  assess.py  extract.py  schemas.py
src/job_triage/job_search/: ashbyhq.py
src/job_triage/job_search/providers/: ashbyhq.py  schemas.py  schemes.py
tests/: conftest.py  test_claude_api.py  test_extract.py  test_logging_utils.py
tests/db/: test_db_access.py  test_models.py
tests/job_apply/: test_app.py  test_resumes.py
tests/job_apply/llm/: conftest.py  run_apply_evals.py  test_helpers.py  test_prose.py  test_run_apply_evals.py  test_selection.py
tests/job_apply/llm/eval_helpers/: prose_checks.py  selection_checks.py  support.py  test_prose_checks.py  test_selection_checks.py  test_support.py
tests/job_apply/llm/evals/backend_ai_customer_engineer/: prose_context.json  prose_expected_output.json  resume_context.json  selection_expected_output.json  selection_input.py
tests/job_apply/llm/evals/backend_api_platform_engineer/: inventory.json  prose_context.json  prose_expected_output.json  resume_context.json  selection_expected_output.json  selection_input.py
tests/job_apply/llm/evals/cfd_thermal_multiphase_engineer/: inventory.json  prose_context.json  prose_expected_output.json  resume_context.json  selection_expected_output.json  selection_input.py
tests/job_apply/llm/evals/cfd_wind_energy_openfoam_engineer/: prose_context.json  prose_expected_output.json  resume_context.json  selection_expected_output.json  selection_input.py
tests/job_apply/llm/evals/rse_ai_research_platform_engineer/: prose_context.json  prose_expected_output.json  resume_context.json  selection_expected_output.json  selection_input.py
tests/job_apply/llm/evals/rse_scientific_python_hpc_engineer/: inventory.json  prose_context.json  prose_expected_output.json  resume_context.json  selection_expected_output.json  selection_input.py
tests/job_assess/: conftest.py  test_app.py  test_source_mapping.py
tests/job_assess/llm/: conftest.py  run_analysis_evals.py  run_extraction_evals.py  test_analyze.py  test_assess.py  test_extract.py  test_run_analysis_evals.py  test_run_extraction_evals.py
tests/job_assess/llm/eval_helpers/: assessment_checks.py  extraction_checks.py  runner.py  support.py  test_extraction_eval_checks.py  test_runner.py  test_support.py
tests/job_assess/llm/evals/: extract_eval_results.json
tests/job_assess/llm/evals/cfd_role/: expected_assessment.json  expected_extraction.json  expected_source.json  input.json  job_post.md
tests/job_assess/llm/evals/explicit_worldwide/: expected_assessment.json  expected_extraction.json  expected_source.json  job_post.md
tests/job_assess/llm/evals/heavy_stack/: expected_assessment.json  expected_extraction.json  expected_source.json  job_post.md
tests/job_assess/llm/evals/hybrid_in_country_only/: expected_assessment.json  expected_extraction.json  expected_source.json  job_post.md
tests/job_assess/llm/evals/lead_role/: expected_assessment.json  expected_extraction.json  expected_source.json  input.json  job_post.md
tests/job_assess/llm/evals/recruiter_contact_info_messy/: expected_assessment.json  expected_extraction.json  expected_source.json  input.json  job_post.md
tests/job_assess/llm/evals/remote_eu_only_implied/: expected_assessment.json  expected_extraction.json  expected_source.json  input.json  job_post.md
tests/job_assess/llm/evals/spain_hybrid/: expected_assessment.json  expected_extraction.json  expected_source.json  input.json  job_post.md
tests/job_assess/llm/evals/title_ambiguous_seniority_implied/: expected_assessment.json  expected_extraction.json  expected_source.json  input.json  job_post.md
tests/job_search/: test_ashbyhq.py
tests/llm/evals/cfd_role/: expected_assessment.json  expected_extraction.json  input.json
tests/llm/evals/explicit_worldwide/: expected_assessment.json  expected_extraction.json  input.json
tests/llm/evals/heavy_stack/: expected_assessment.json  expected_extraction.json  input.json  job_post.md
tests/llm/evals/hybrid_in_country_only/: expected_assessment.json  expected_extraction.json  input.json
tests/llm/evals/lead_role/: expected_assessment.json  expected_extraction.json  job_post.md
tests/llm/evals/recruiter_contact_info_messy/: expected_assessment.json  expected_extraction.json  input.json  job_post.md
tests/llm/evals/remote_eu_only_implied/: expected_assessment.json  expected_extraction.json  job_post.md
tests/llm/evals/spain_hybrid/: expected_assessment.json  expected_extraction.json  input.json  job_post.md
tests/llm/evals/title_ambiguous_seniority_implied/: expected_assessment.json  expected_extraction.json  input.json  job_post.md
