[build-system]
# Standard build-system requirements as defined by PEP 518
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "job_triage"
version = "0.1.0"
description = "Job triage workflow to help apply for jobs"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Elliott Bache", email = "elliottbache@gmail.com"}
]
# Define your runtime dependencies here
dependencies = [
    "pydantic==2.10.6",
    "anthropic==0.96.0",
    "python-dotenv==1.2.2",
    "pre-commit==4.1.0",
    "pandas==3.0.2",
    "tenacity==9.1.2"
]

[project.optional-dependencies]
# Define development-only tools here
dev = [
    "black==24.10.0",
    "pytest==8.3.4",
    "sphinx==8.0.2",
    "sphinx-autodoc-typehints",
    "sphinx_rtd_theme",
    "myst-parser==4.0.0",
    "ruff==0.14.10",
    "isort==6.0.0",
    "mypy==1.13.0",
    "codespell==2.4.1",
    "pytest-cov==6.0.0",
    "spacy==3.8.3",
]

[project.scripts]
job_triage = "job_triage.app:main"

[tool.setuptools]
# Tell setuptools that packages live under `src/`
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
job_triage = []

# pyproject.toml
[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E","F","I","UP","B","SIM","S","PERF","RUF"]
ignore = ["E203", "E501"]  # let the formatter handle wrapping
fixable = ["I", "E","UP","SIM","PERF","RUF"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]

[tool.ruff.format]
quote-style = "double"

[tool.black]
line-length = 88
target-version = ["py312"]
extend-exclude = "^(migrations|build|dist|.venv|_deps)/"

[tool.mypy]
python_version = "3.12"
strict = false
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
files = ["src"]
explicit_package_bases = true
namespace_packages = true
mypy_path = ["src"]

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

[tool.codespell]
skip = "./docs/_build,./build,./dist,./.venv,./docs/html,./src/include,./docs/_static,pyproject.toml,./build*,./htmlcov"
ignore-words-list = "teh,nd,seh,atleast,atmost,deques,ser,requeried"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = [
  "-q",
  "--cov=src",
  "--cov-report=term-missing",
  "--cov-report=xml:coverage.xml",
  "--cov-report=html:htmlcov",
  "--cov-fail-under=85"
]