[build-system]
# Standard build-system requirements as defined by PEP 518
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "job_triage"
version = "0.1.0"
description = "Job triage workflow to help apply for jobs"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Elliott Bache", email = "elliottbache@gmail.com"}
]
# Define your runtime dependencies here
dependencies = [
    "pydantic==2.10.6",
    "anthropic==0.96.0",
    "python-dotenv==1.2.2",
    "pre-commit==4.1.0",
    "pandas==3.0.2",
    "tenacity==9.1.2",
    "beautifulsoup4==4.12.3",
    "requests==2.34.2",
    "sqlalchemy==2.0.38",
    "alembic==1.18.4",
]

[project.optional-dependencies]
# Define development-only tools here
dev = [
    "black==24.10.0",
    "pytest==8.3.4",
    "sphinx==8.0.2",
    "sphinx-autodoc-typehints==2.4.4",
    "sphinx-rtd-theme==3.1.0",
    "myst-parser==4.0.0",
    "ruff==0.14.10",
    "isort==6.0.0",
    "mypy==1.13.0",
    "codespell==2.4.1",
    "pytest-cov==6.0.0",
    "spacy==3.8.3",
]

[project.scripts]
job_triage = "job_triage.app:main"

[tool.setuptools]
# Tell setuptools that packages live under `src/`
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
job_triage = []

# pyproject.toml
[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E","F","I","UP","B","SIM","S","PERF","RUF"]
ignore = ["E203", "E501"]  # let the formatter handle wrapping
fixable = ["I", "E","UP","SIM","PERF","RUF"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]

[tool.ruff.format]
quote-style = "double"

[tool.black]
line-length = 88
target-version = ["py312"]
extend-exclude = "^(migrations|build|dist|.venv|_deps)/"

[tool.mypy]
python_version = "3.12"
strict = false
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
files = ["src"]
explicit_package_bases = true
namespace_packages = true
mypy_path = ["src"]

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

[tool.codespell]
skip = "./docs/_build,./build,./dist,./.venv,./docs/html,./src/include,./docs/_static,pyproject.toml,./build*,./htmlcov,./private,./src/job_triage/job_assess/llm/aliases.py,./tests/job_apply/llm/evals"
ignore-words-list = "teh,nd,seh,atleast,atmost,deques,ser,requeried"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = [
  "-q",
  "--cov=src",
  "--cov-report=term-missing",
  "--cov-report=xml:coverage.xml",
  "--cov-report=html:htmlcov",
  "--cov-fail-under=85"
]

[tool.alembic]
script_location = "migrations"

# template used to generate migration file names; The default value is %%(rev)s_%%(slug)s
# Uncomment the line below if you want the files to be prepended with date and time
# see https://alembic.sqlalchemy.org/en/latest/tutorial.html#editing-the-ini-file
# for all available tokens
# file_template = "%%(year)d_%%(month).2d_%%(day).2d_%%(hour).2d%%(minute).2d-%%(rev)s_%%(slug)s"
# Or organize into date-based subdirectories (requires recursive_version_locations = true)
# file_template = "%%(year)d/%%(month).2d/%%(day).2d_%%(hour).2d%%(minute).2d_%%(second).2d_%%(rev)s_%%(slug)s"

# additional paths to be prepended to sys.path. defaults to the current working directory.
prepend_sys_path = [
    "."
]

# timezone to use when rendering the date within the migration file
# as well as the filename.
# If specified, requires the tzdata library which can be installed by adding
# `alembic[tz]` to the pip requirements.
# string value is passed to ZoneInfo()
# leave blank for localtime
# timezone =

# max length of characters to apply to the "slug" field
# truncate_slug_length = 40

# set to 'true' to run the environment during
# the 'revision' command, regardless of autogenerate
# revision_environment = false

# set to 'true' to allow .pyc and .pyo files without
# a source .py file to be detected as revisions in the
# versions/ directory
# sourceless = false

# version location specification; This defaults
# to <script_location>/versions.  When using multiple version
# directories, initial revisions must be specified with --version-path.
# version_locations = [
#    "%(here)s/alembic/versions",
#    "%(here)s/foo/bar"
# ]


# set to 'true' to search source files recursively
# in each "version_locations" directory
# new in Alembic version 1.10
# recursive_version_locations = false

# the output encoding used when revision files
# are written from script.py.mako
# output_encoding = "utf-8"

# This section defines scripts or Python functions that are run
# on newly generated revision scripts.  See the documentation for further
# detail and examples
# [[tool.alembic.post_write_hooks]]
# format using "black" - use the console_scripts runner,
# against the "black" entrypoint
# name = "black"
# type = "console_scripts"
# entrypoint = "black"
# options = "-l 79 REVISION_SCRIPT_FILENAME"
#
# [[tool.alembic.post_write_hooks]]
# lint with attempts to fix using "ruff" - use the module runner, against the "ruff" module
# name = "ruff"
# type = "module"
# module = "ruff"
# options = "check --fix REVISION_SCRIPT_FILENAME"
#
# [[tool.alembic.post_write_hooks]]
# Alternatively, use the exec runner to execute a binary found on your PATH
# name = "ruff"
# type = "exec"
# executable = "ruff"
# options = "check --fix REVISION_SCRIPT_FILENAME"
